--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Game",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --host \"0.0.0.0\" --port 8080 --inline --progress --profile --colors --watch --content-base src/ --mode=development --trace=warnings"
+    "start": "webpack-dev-server --host \"0.0.0.0\" --port 8080 --inline --progress --profile --colors --watch --content-base src/ --mode=development --trace=warnings",
+    "build": "webpack --mode=production"
   },
   "author": "lbotano",
   "license": "GPL-3.0",
@@ -26,6 +26,7 @@
     "pixi.js": "^5.2.3",
     "source-map-loader": "^0.2.4",
     "ttf-loader": "^1.0.2",
+    "underscore.string": "^3.3.5",
     "webfontloader": "^1.6.28",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
